Fix AXRemoteHost::SendEvent DCHECK when toggling ChromeVox with KSV app

Bug: 910224
Change-Id: Ie1d13e6d2c41b4096ce7912ba494db2fe468c678
Reviewed-on: https://chromium-review.googlesource.com/c/1355196
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612350}
Former-commit-id: bfb0e5146ea4e8740c9ab32227d78178b067a251